syntax = "proto3";

package goods;

service Goodss {
    // 获取用户列表
    rpc List(Request) returns (Response) {}
}
message Barcode{
    string BarCode = 1;     // 条码
    string PluCode = 2;     // 商品编码
    string DepCode = 3;     // 部门编码
    string PluName = 4;     // 商品名称
    string PluAbbrName = 5; // 商品别名
    string Spec = 6;        // 规格
}
message Goods {
    string PluCode = 1; // 自编码
    string PluName = 2; // 商品名称
    string BarCode = 3; // 条码
    string Unit = 4;    // 单位
    string Spec = 5;    // 规格
    string Weigt = 6;   // 重量
    string DepCode = 7; // 部门ID
    string Produce = 8; // 国家税收分类编码(原-产地)
    string Grade = 9;   // Grade 国家税收分类名(原-等级)
    string SupCode = 10;    // 供应商ID
    string ClsCode = 11;    // 品类ID
    string BrandCode = 12;  // 品牌ID
    string HJPrice = 13;    // 含税进价
    string WJPrice = 14;    // 未税进价
    string SPrice = 15;     // 零售价
    string HyPrice = 16;    // 会员价
    string PfPrice = 17;    // 批发价
    string JTaxRate = 18;   // 进项税率
    string XTaxRate = 19;   // 销项税率
    string CgyCode = 20;    // 采购员ID
    string CgyName = 21;    // 采购员名称
    string XgDate = 22;     // 修改时间
    string LrDate = 23;     // 录入时间
    string UserCode = 24;    // 用户ID
    string UserName = 25;    // 用户名称
    string PackPriceType = 26;// 打包类型
    string PackPriceRate = 27;// 打包价格率
    string PluStatus = 28;    // 商品状态(0,1,2,3,4,A,B)
    repeated Barcode Barcodes = 29;
}
message ListQuery{
    int64 limit = 1;          // 返回数量
    int64 page = 2;           // 页面
    string sort = 3;          // 排序
    string where = 4;         // 修改时间  (`XgDate|>=|time|2019-10-19 00:00:00`) 查询字段|条件|类型|值
}
message Request {
    ListQuery list_query = 1;           // 列表分页请求
    Goods goods = 2;                    // 用户
}

message Response {
    bool valid = 1;
    int64 total = 2;
    Goods goods = 3;
    repeated Goods goodss = 4;
}